--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html>
   <head>
     <title>Testing page</title>
+    <meta charset="utf-8" />
+    <meta name="description" content="" />
   </head>
   <body>
-    Test page
+    <p name="valor"><h1>High Test</h1></p>
+    <input autofocus>
   </body>
 </html>
