adding header class 9

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="description" content="" />
   </head>
   <body>
-    <p name="valor"><h1>High Test</h1></p>
-    <input autofocus>
+    <p>Richard Cori</p>
+    <p>Software Developer</p>
+    <header class="">A Studen writing html fundamentals project</header>
   </body>
 </html>
