adding styles and background class 10

--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     <meta name="description" content="" />
   </head>
   <body>
-    <p>Richard Cori</p>
-    <p>Software Developer</p>
-    <header class="">A Studen writing html fundamentals project</header>
+    <header style="background-color: #3949ab; color: white">
+      <p style="display: inline-block; width: 400px">Richard Cori</p>
+      <p style="display: inline-block; width: 400px">Software Developer</p>
+      <div style="background-color: #f06292; color: black">
+        A Studen writing html fundamentals project
+      </div>
+    </header>
   </body>
 </html>
