update some code

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Testing page</title>
     <meta charset="utf-8" />
-    <meta name="description" content="" />
+    <title>The best plase to buy a Pizza</title>
+    <link rel="stylesheet" href="./assets/css/normalize.css" />
+    <link href="./font-awesome/css/all.css" />
+    <link href="./assets/css/main.css" rel="stylesheet" />
   </head>
   <body>
     <header style="background-color: #3949ab; color: white">
@@ -13,5 +15,41 @@
         A Studen writing html fundamentals project
       </div>
     </header>
+    <div class="container">
+      <div class="content">
+        <table>
+          <thead>
+            <th>#</th>
+            <th>Name</th>
+            <th>Location</th>
+            <th>Score</th>
+            <th>Actions</th>
+          </thead>
+          <tbody>
+            <tr>
+              <th>1</th>
+              <th>Luigi's</th>
+              <th>Av. Circumvalacion</th>
+              <th>4.5</th>
+              <th></th>
+            </tr>
+            <tr>
+              <th>2</th>
+              <th>Mama mia</th>
+              <th>C. Octavio</th>
+              <th></th>
+              <th></th>
+            </tr>
+            <tr>
+              <th>3</th>
+              <th>Richarini</th>
+              <th>Mall Center</th>
+              <th>5</th>
+              <th></th>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
   </body>
 </html>
