cleaning environment for the course

--- a/index.html
+++ b/index.html
@@ -1,75 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <title>The best plase to buy a Pizza</title>
-    <link rel="stylesheet" href="./assets/css/normalize.css" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
-    />
-    <link href="./assets/css/main.css" rel="stylesheet" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
   </head>
-  <body>
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-      crossorigin="anonymous"
-    ></script>
-    <header style="background-color: #3949ab; color: white">
-      <p style="display: inline-block; width: 400px">Richard Cori</p>
-      <p style="display: inline-block; width: 400px">Software Developer</p>
-      <div style="background-color: #f06292; color: black">
-        A Student writing html fundamentals project
-      </div>
-    </header>
-    <div class="container">
-      <div class="content">
-        <table class="table">
-          <thead>
-            <th>#</th>
-            <th>Name</th>
-            <th>Location</th>
-            <th>Score</th>
-            <th>Actions</th>
-          </thead>
-          <tbody>
-            <tr>
-              <th>1</th>
-              <th>Luigi's</th>
-              <th>Av. Circumvalacion</th>
-              <th>4.5</th>
-              <th></th>
-            </tr>
-            <tr>
-              <th>2</th>
-              <th>Mama mia</th>
-              <th>C. Octavio</th>
-              <th></th>
-              <th></th>
-            </tr>
-            <tr>
-              <th>3</th>
-              <th>Richarini</th>
-              <th>Mall Center</th>
-              <th>5</th>
-              <th></th>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-    </div>
-  </body>
+  <body></body>
 </html>
