sections and articles

--- a/index.html
+++ b/index.html
@@ -12,6 +12,24 @@
     <title>Course</title>
   </head>
   <body>
-    test
+    <header>
+      <h2>My summer holiday</h2>
+    </header>
+    <main>
+      <article>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit itaque
+        dolorum minus error impedit voluptatem dicta provident quibusdam
+        corporis accusamus, aut ab maxime, nobis optio doloribus cumque rem,
+        nulla totam.
+
+        <p>This summer I visited my grandparents</p>
+
+        <section>
+          <h3>Day one</h3>
+          <p>I arrived at my grandparent's house</p>
+        </section>
+      </article>
+    </main>
+    <footer>Footer</footer>
   </body>
 </html>
