metadata of the page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     />
     <link rel="stylesheet" href="./assets/css/main.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="RichardSon94" content="Richard's first web page" />
+    <meta name="keywords" content="Web,Front,Developer" />
     <title>Course</title>
   </head>
   <body>
