--- a/index.html
+++ b/index.html
@@ -34,73 +34,36 @@
       </ul>
     </nav>
     <main>
-      <h1>Blog</h1>
-      <article>
-        <h2>20% off this weekend</h2>
-        <p>Come down to little Lemon and your meal will be 20% off!</p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Est rem nulla
-        ratione! Expedita consequuntur officia, iure suscipit non soluta illum
-        at ab eum error voluptates, sequi quas? Natus, nulla eveniet.
-      </article>
-      <article>
-        <h2>Our new Menu</h2>
-        <p>We've update our menu with new dinners.</p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam dolorum
-        velit autem aliquid nisi voluptatum nulla non molestias voluptatem
-        impedit, cum nihil, facere tenetur! A minima saepe voluptatem quos
-        sequi?
-      </article>
-
-      <hr />
-
-      <form action="myserver.com" method="POST">
-        <label for="fname">First name:</label>
-        <input type="text" id="fname" name="fname" />
-        <br />
-        <label for="pwd">Password:</label>
-        <input type="password" id="pwd" name="pwd" />
-        <br />
-        <label for="birthdaytime">Birthday (date and time):</label>
-        <input type="datetime-local" id="birthdaytime" name="birthdaytime" />
-        <br />
-        <label for="birthdaytime">Birthday (date and time):</label>
-        <input type="datetime-local" id="birthdaytime" name="birthdaytime" />
-        <br />
-        <label for="myfile">Select a file:</label>
-        <input type="file" id="myfile" name="myfile" />
-        <br />
-        <input type="hidden" id="custId" name="custId" value="3487" />
-        <br />
-        <input type="number" id="quantity" name="quantity" min="1" max="5" />
-        <br />
-        <label for="volume">Volume:</label>
-        <input type="range" id="volume" name="volume" min="0" max="10" />
-        <br />
-        <input type="reset" />
-        <br />
-        <label for="appt">Select a time:</label>
-        <input type="time" id="appt" name="appt" />
-        <br />
-        <label for="phone">Enter your phone number:</label>
-        <input
-          type="tel"
-          id="phone"
-          name="phone"
-          pattern="[+]{1}[0-9]{11,14}"
-        />
-        <br />
-        <label for="bdaymonth">Birthday (month and year):</label>
-        <input
-          type="month"
-          id="bdaymonth"
-          name="bdaymonth"
-          min="1930-01"
-          value="2000-01"
-        />
-        <br />
-        <input type="submit" value="Submit" />
+      <h1>Sign Up</h1>
+      <form>
+        <div>
+          <label for="user_first_name">First Name</label>
+          <input type="text" id="user_first_name" name="user_first_name" />
+        </div>
+        <div>
+          <label for="user_last_name">Last Name</label>
+          <input type="tex" id="user_last_name" name="user_last_name" />
+        </div>
+        <div>
+          <label for="user_email">Email</label>
+          <input type="email" id="user_email" name="user_email" />
+        </div>
+        <div>
+          <label for="user_password">Password</label>
+          <input type="password" id="user_password" name="user_password" />
+        </div>
+        <div>
+          <label aria-label="user_confirm_password">Confirm Password</label>
+          <input
+            type="password"
+            id="user_confirm_password"
+            name="user_confirm_password"
+          />
+        </div>
+        <div>
+          <button type="submit">Sign Up</button>
+        </div>
       </form>
-      <hr />
     </main>
     <footer>
       <p>Copyright Little Lemon</p>
