--- a/index.html
+++ b/index.html
@@ -21,30 +21,18 @@
       <img src="./assets/images/logo.png" />
     </header>
     <main>
-      <form>
-        <div>
-          <label for="user_username">Username</label>
-          <input
-            type="text"
-            id="user_username"
-            name="user_username"
-            required
-            minlength="2"
-          />
-        </div>
-        <div>
-          <label for="user_password">Password</label>
-          <input
-            type="password"
-            id="user_password"
-            name="user_password"
-            required
-            minlength="2"
-          />
-        </div>
-        <div>
-          <button type="submit">Log In</button>
-        </div>
+      <h1>Book a Table</h1>
+      <form method="POST">
+        <fieldset id="size">
+          <input type="radio" value="2" name="size" /> 2-person table
+          <input type="radio" value="4" name="size" checked /> 4 person table
+          <input type="radio" value="6" name="size" /> 6-person table
+        </fieldset>
+        <fieldset id="location">
+          <input type="radio" value="indoors" name="location" checked /> Indoors
+          <input type="radio" value="Outdoors" name="location" /> Outdoors
+        </fieldset>
+        <button type="submit">Book table</button>
       </form>
     </main>
   </body>
