adding audio and embeded media

--- a/index.html
+++ b/index.html
@@ -21,34 +21,17 @@
       <img src="./assets/images/logo.png" />
     </header>
     <main>
-      <h1>Book a Table</h1>
-      <form>
-        <div>
-          <label for="client_email">Email Address</label>
-          <input type="email" id="client_email" name="client_email" required />
-        </div>
-        <div>
-          <label for="booking_date">Date of Booking</label>
-          <input type="date" id="booking_date" name="booking_date" />
-        </div>
-        <div>
-          <label for="number_people">Number of people</label>
-          <input
-            type="number"
-            id="number_people"
-            name="booking_date"
-            min="1"
-            max="8"
-          />
-        </div>
-        <div>
-          <label>
-            <input type="checkbox" id="policy" name="policy" required />
-            I agree to the cancellation policy
-          </label>
-        </div>
-        <button type="submit">Book Now</button>
-      </form>
+      <h1>About</h1>
+      <video width="320" height="320" controls>
+        <source src="video.mp4" type="video/mp4" />
+      </video>
+      <p>
+        Little Lemon is a family-owned meditarrean restaurant, focused on
+        traditional food
+      </p>
+      <audio loop controls>
+        <source src="music.ogg" type="audio/ogg" />
+      </audio>
     </main>
   </body>
 </html>
