completed lab of the course

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
     <main>
       <h1>About</h1>
-      <video width="320" height="320" controls>
+      <video width="320" height="240" controls muted>
         <source src="video.mp4" type="video/mp4" />
       </video>
       <p>
