--- a/index.html
+++ b/index.html
@@ -17,39 +17,14 @@
     <link rel="stylesheet" href="./assets/css/main.css" />
   </head>
   <body>
-    <header>
-      <img src="./assets/images/logo.png" />
-    </header>
-    <main>
-      <h1>About</h1>
-      <p>Here is an example of an iframe:</p>
-      <iframe src="https://www.example.com"></iframe>
-      <hr />
-      <video controls width="320" height="240">
-        <source src="video.mp4" type="video/mp4" />
-      </video>
-
-      <form>
-        <div>
-          <label for="rating">Rating</label>
-          <input
-            type="range"
-            min="1"
-            max="5"
-            id="rating"
-            name="rating"
-            list="ratings"
-          />
-          <datalist id="ratings">
-            <option value="1" label="1"></option>
-            <option value="2"></option>
-            <option value="3"></option>
-            <option value="4"></option>
-            <option value="5" label="5"></option>
-          </datalist>
-        </div>
-        <button type="submit">Submit Rating</button>
-      </form>
-    </main>
+    <div class="flex-container">
+      <div class="box box1">One..</div>
+      <div class="box box2">Two..</div>
+      <div class="box box3">Three..</div>
+      <div class="box box4">Four..</div>
+      <div class="box box5">Five..</div>
+      <div class="box box6">Six..</div>
+      <div class="box box7">Seven..</div>
+    </div>
   </body>
 </html>
