another type of flexbox

--- a/flexbox3_search.html
+++ b/flexbox3_search.html
@@ -8,6 +8,20 @@
     <link rel="stylesheet" href="./assets/css/main.css" />
   </head>
   <body>
-    <div class="container"></div>
+    <div class="container">
+      <img
+        class="icon"
+        src="./assets/images/logo.png"
+        alt="Sample image"
+        style="width: 32px; height: 24px"
+      />
+      <input
+        class="searchBox"
+        type="search"
+        name="search"
+        placeholder="Enter Text here.."
+      />
+      <input type="submit" value="search" class="searchButton" />
+    </div>
   </body>
 </html>
