--- a/index.html
+++ b/index.html
@@ -1,30 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Little Lemon</title>
+    <meta name="description" content="A brief description" />
+    <meta name="author" content="Little Lemon Restaurant" />
 
-    <meta property="og:title" content="Our Menu" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="logo.png" />
-    <meta property="og:url" content="https://littlelemon/" />
-    <meta
-      property="og:description"
-      content="Little Lemon is a family-owned Mediterranean restaurant, focused on traditional recipes served with a modern twist."
+    <link rel="stylesheet" href="./assets/css/styles.css" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Markazi Text"
+      rel="stylesheet"
     />
-    <meta property="og:locale" content="en_US" />
-    <meta property="og:site_name" content="Little Lemon" />
-
-    <link rel="stylesheet" href="./assets/css/main.css" />
   </head>
   <body>
-    <div class="flex-container">
-      <div class="box box1">One..</div>
-      <div class="box box2">Two..</div>
-      <div class="box box3">Three..</div>
-      <div class="box box4">Four..</div>
-      <div class="box box5">Five..</div>
-      <div class="box box6">Six..</div>
-      <div class="box box7">Seven..</div>
-    </div>
+    <header><img src="./assets/images/Asset 16@4x.png" /></header>
+    <nav>
+      <nav>
+        <ul>
+          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="menu.html">Menu</a></li>
+          <li><a href="book.html">Book</a></li>
+          <li><a href="about.html">About</a></li>
+        </ul>
+      </nav>
+    </nav>
+    <main>
+      <section class="promotion">
+        <img src="https://bit.ly/2rlzaXi" alt="Five developers at work." />
+        <article>
+          <h1>30 % Off this Weekend</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque aut
+            neque expedita voluptates consequatur id quia ducimus iste! Eveniet
+            sed numquam perferendis enim facere ea molestias laboriosam
+            laudantium aliquam cupiditate?
+          </p>
+        </article>
+      </section>
+      <section>
+        <article>
+          <h2>Our New Menu</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque aut
+            neque expedita voluptates consequatur id quia ducimus iste! Eveniet
+            sed numquam perferendis enim facere ea molestias laboriosam
+            laudantium aliquam cupiditate?
+          </p>
+        </article>
+        <article>
+          <h2>Book a table</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque aut
+            neque expedita voluptates consequatur id quia ducimus iste! Eveniet
+            sed numquam perferendis enim facere ea molestias laboriosam
+            laudantium aliquam cupiditate?
+          </p>
+        </article>
+        <article>
+          <h2>Opening Hours</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque aut
+            neque expedita voluptates consequatur id quia ducimus iste! Eveniet
+            sed numquam perferendis enim facere ea molestias laboriosam
+            laudantium aliquam cupiditate?
+          </p>
+        </article>
+      </section>
+    </main>
+    <footer>
+      <div>
+        <img src="./assets/images/Asset 18@4x.png" />
+      </div>
+      <div class="copiright">
+        <p align="right">&#169; Copiright Little Lemon</p>
+      </div>
+    </footer>
   </body>
 </html>
