adding last details

--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
     </nav>
     <main>
       <section class="promotion">
-        <img src="https://bit.ly/2rlzaXi" alt="Five developers at work." />
+        <img
+          src="https://media.istockphoto.com/id/185065945/es/foto/pasta-de-variaci%C3%B3n.jpg?s=612x612&w=0&k=20&c=40iJaiMARmLy26XBL0eUCtDvKXEdphj0R2bcOMLKJgY="
+          alt="Five developers at work."
+        />
         <article>
           <h1>30 % Off this Weekend</h1>
           <p>
@@ -41,9 +44,14 @@
           </p>
         </article>
       </section>
-      <section>
+      <section class="information">
         <article>
           <h2>Our New Menu</h2>
+          <figure>
+            <img
+              src="https://assets.bonappetit.com/photos/5e8cdb60a7a01c00083b08a9/1:1/w_2560%2Cc_limit/HMONG-Potluck-Chopped-Salad.jpg"
+            />
+          </figure>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque aut
             neque expedita voluptates consequatur id quia ducimus iste! Eveniet
@@ -53,6 +61,11 @@
         </article>
         <article>
           <h2>Book a table</h2>
+          <figure>
+            <img
+              src="https://assets.bonappetit.com/photos/5e8cdb60a7a01c00083b08a9/1:1/w_2560%2Cc_limit/HMONG-Potluck-Chopped-Salad.jpg"
+            />
+          </figure>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque aut
             neque expedita voluptates consequatur id quia ducimus iste! Eveniet
@@ -62,6 +75,11 @@
         </article>
         <article>
           <h2>Opening Hours</h2>
+          <figure>
+            <img
+              src="https://assets.bonappetit.com/photos/5e8cdb60a7a01c00083b08a9/1:1/w_2560%2Cc_limit/HMONG-Potluck-Chopped-Salad.jpg"
+            />
+          </figure>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque aut
             neque expedita voluptates consequatur id quia ducimus iste! Eveniet
@@ -71,11 +89,12 @@
         </article>
       </section>
     </main>
+    <br />
     <footer>
       <div>
         <img src="./assets/images/Asset 18@4x.png" />
       </div>
-      <div class="copiright">
+      <div class="copyright">
         <p align="right">&#169; Copiright Little Lemon</p>
       </div>
     </footer>
