--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="A brief description" />
     <meta name="author" content="Little Lemon Restaurant" />
 
-    <link rel="stylesheet" href="./assets/css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link
@@ -17,7 +17,7 @@
     />
   </head>
   <body>
-    <header><img src="./assets/images/Asset 16@4x.png" /></header>
+    <header><img src="./images/Asset 16@4x.png" /></header>
     <nav>
       <nav>
         <ul>
